Add the rest of the functions for CRUD. Update swagger.json. Add validation to both routes
